[PAGOPA-2721] updated onUs logic in order to retrieve its value from DB field. Fixed unit tests and code smell